simple.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simpledeploy
spec:
  selector:
    matchLabels:
      app: simpledeploy
  replicas: 1
  template:
    metadata:
      labels:
        app: simpledeploy
      annotations:
       telegraf.influxdata.com/class: app
       telegraf.influxdata.com/port: "8080"
       telegraf.influxdata.com/path: /metrics
       telegraf.influxdata.com/interval: 5s
       telegraf.influxdata.com/scheme: http
       telegraf.influxdata.com/internal: "true"
    spec:
      containers:
      - name: simpledeploy
        image: docker.io/fajarnrs/simpleservice:v1
        ports:
        - containerPort: 9876

---
apiVersion: v1
kind: Service
metadata:
  name: simpleservice
  labels:
    run: simpleservice
spec:
  ports:
  - name: simpledeploy
    port: 9876
    targetPort: 9876
  selector:
    app: simpledeploy
  type: ClusterIP
