ingress-influxdb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-influxdb
spec:
 ingressClassName: nginx
 rules:
 - http:
     paths:
     - path: /
       pathType: Prefix
       backend:
         service:
           name: influxdb
           port:
            number: 8086
